app/assets/stylesheets/directory_objects_show.css.scss
/* ... */
/* For Wayfinding debug */
.debugPath {
  stroke: orange;
  stroke-width: 1;
}

.debugRoom {
  fill: red;
  stroke: red;
  stroke-width: 3;
}

/* About page */
.about-page {
  margin-top: 2em;
  font-size: 1.2em;
  color: #555;
  line-height: 1.75em;

  img.building-pic-1 {
    width: 60%;
    padding: 0 0 1em 1em;
    float: right;
  }

  img.building-pic-2 {
    width: 60%;
    padding: 1em 1em 1em 0;
    float: left;
  }

  .legal {
    color: #aaa;
    font-size: 0.7em;
    line-height: 1.3em;
  }
}

/* Administration tabs */

.tabs-left > .nav-tabs {
  border-bottom: 0;
}

.tab-content > .tab-pane,
.pill-content > .pill-pane {
  display: none;
}

.tab-content > .active,
.pill-content > .active {
  display: block;
  float: left;
  padding: 5px 20px;
  width: 80%;
  height: 75vh;
  overflow: auto;
}

.tabs-left > .nav-tabs > li {
  float: none;
}

.tabs-left > .nav-tabs > li > a {
  min-width: 74px;
  margin-right: 0;
  margin-bottom: 3px;
}

.tabs-left > .nav-tabs {
  float: left;
  border-right: 1px solid #ddd;
  height: 75vh;
  width: 20%;
}

.tabs-left > .nav-tabs > li > a {
  margin-right: -1px;
  -webkit-border-radius: 4px 0 0 4px;
     -moz-border-radius: 4px 0 0 4px;
          border-radius: 4px 0 0 4px;
  padding: 5px;
}

.tabs-left > .nav-tabs > li > a:hover,
.tabs-left > .nav-tabs > li > a:focus {
  border-color: #eeeeee #dddddd #eeeeee #eeeeee;
}

.tabs-left > .nav-tabs .active > a,
.tabs-left > .nav-tabs .active > a:hover,
.tabs-left > .nav-tabs .active > a:focus {
  border-color: #ddd transparent #ddd #ddd;
  *border-right-color: #ffffff;
}

.admin-directory-list {
  height: 60vh;
  overflow: auto;
}

/* Fix for panzoom blurriness on Chrome
   https://github.com/timmywil/jquery.panzoom/issues/84 */
#floor0, #floor1, #floor2, #floor3, #floor4, #floor5 {
  -webkit-backface-visibility: initial !important;
  -webkit-transform-origin: 50% 50%;
}

#search-directory, .directory-object-search {
  border-radius: 4px 4px 0 0;
}

.loader {
  background: transparent url("/assets/loader.gif") no-repeat;
  margin: 0 auto;
  height: 15px;
  width: 50px;
  display: block;
}


/*
 * FRONT PAGE MAP NAVIGATION
 */

/* Pad to accomodate static nav-bar */
body {
  padding-top: 11vh;
  height: 100vh;
}


/* this is the map display */
#map {
  width: 100%;
  height: calc(90vh - 28vw);
  min-height: 60vh; /* Only occurs when device is wider than tall (iPad)*/
  text-align: center;

}

/* Scale font size, line height, active, etc based on screen size */
.floor-nav {
  text-align: center; /* UL centered in this top div */
  padding-bottom: 0;

  ul {
    display: inline-block;
    padding: 0; /* Padding is non-zero by default */
    margin-bottom: 0;

    li {
      display: inline-block;
      width: calc(100vw / 7); /* Spread evenly and leave some extra */
      max-width: 15vh; /* Only occurs when device is wider than tall (iPad)*/
      padding-left: 0.5vw;
      padding-right: 0.5vw;
      padding-bottom: 0;
      padding-top: 0;

      img { /* images will maintain aspect ratio => height of this div == width of li */
        width: 100%;
        height: auto;
      }
    }
  }

  .btn-floor.start { /* Circular border stylizing for start floor */
    img {
      border-radius: 50%;
      border-width: 3px;
      border-style: solid;
      border-color: #00e13c;
    }
  }

  .btn-floor.destination { /* Circular border stylizing for destination floor */
    img {
      border-radius: 50%;
      border-width: 3px;
      border-style: solid;
      border-color: #fc6355;
    }
  }
}

/* Used for floor anchors */
.btn-floor {
  display: block;

  &.active {
    opacity: 0.6;
  }

  &.disabled {
    opacity: 0.6;
  }
}

/* Accessibility nav-bar buttons*/
.btn-access {
  &.active {
    opacity: 0.6;
  }
}

/*.middle {
  width: 100%;
  display: inline-block;
}

.map-center {
  text-align: center;
}
*/

/* END FRONT PAGE FLOOR NAV */




/* BEGIN LANDING */
.landing-div {
  height: 90vh;
  width: 100vw;
  text-align: center;
}

.landing-ul {
  margin: auto;
  height: 100%;
  display: inline-table;

  li { /* Holds links to rest of site */
    display: block;
    height: 15vh; /* containing div is 90vh, divide by 5 and leave some extra */
    text-align: left;
    padding-top: 1vh;
    padding-bottom: 1vh;

    a { /* Anchors hold button images */
      height: 100%;
      display: inline-block;

      img { /* Button imags scale to fit container */
        height: 100%;
        width: auto;
        display: inline-block;
      }
    }

    span { /* Can further style the text accompanying buttons */
      display: inline-block;
    }

  }
}
/* END LANDING */



//navbar stuffs
.btn-navbar-main {  //home button
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 5px;
    padding: 3px 3px;
	border-radius: 50%;
}

.text-logout { //toggle menu list text size
  font-size: 2em;
}

.btn-logout-nav {
	height: 4.5vh;
	margin-top: 7px;
	float: right;
	border-radius: 4px;
}

.btn-text { //toggle menu list text size
  font-size: 1.25em;
}

.btn-block {
	text-align: left;
	text-indent: 40%;
}

.navbar-fixed-top .navbar-collapse,
.navbar-fixed-bottom .navbar-collapse {
  max-height: 100%;
}

.navbar-collapse {
	img {
		height: 50px;	//icon size
	}
}

//STOP NAVBAR FROM COLLAPSING
.navbar-header {
    float: none;
	img {
		height: 50px;	//icon size
		max-height: 9vh;
	}
}
.navbar-toggle {
    display: block;
    padding: 10px 10px;
    margin-right: 10px;
	margin-left: 10px;
	margin-top: 13px;
	height: 40px;
}
.navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    max-height: 100%;
}
.navbar-collapse.collapse {
    display: none!important;
}

.navbar-collapse.collapse.in {
  display: block !important;
}
.navbar-nav {
    float: none!important;
    margin: 7.5px -15px;
}
.navbar-nav>li {
    float: none;
}
.navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}
/* ... */

